--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
+    "seed": "cross-env NODE_OPTIONS=--no-deprecation tsx scripts/seed-data.ts",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test",
@@ -37,7 +38,8 @@
     "lucide-react": "^0.542.0",
     "next": "15.4.4",
     "payload": "3.54.0",
-    "react": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
     "sharp": "0.34.2",
     "tailwind-merge": "^3.3.1",
@@ -46,17 +48,22 @@
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
+    "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.4",
     "jsdom": "26.1.0",
+    "node-fetch": "^3.3.2",
     "playwright": "1.54.1",
     "playwright-core": "1.54.1",
     "prettier": "^3.4.2",
+    "tsx": "^4.20.5",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.3"
