add gupshup keys

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,54 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+# Database Configuration
+DATABASE_URI=mongodb://127.0.0.1:27017/ax-billing
+PAYLOAD_SECRET=your-super-secret-key-here
+
+# Cloudflare R2 Storage (Optional)
+S3_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
+S3_REGION=auto
+S3_BUCKET=ax-billing-media
+S3_ACCESS_KEY_ID=your-access-key
+S3_SECRET_ACCESS_KEY=your-secret-key
+
+# WhatsApp Integration (Gupshup.io)
+GUPSHUP_API_KEY=your_gupshup_api_key_here
+GUPSHUP_APP_NAME=your_gupshup_app_name
+GUPSHUP_SOURCE_NUMBER=60172207030
+GUPSHUP_WEBHOOK_URL=https://your-domain.com/api/webhooks/whatsapp
+GUPSHUP_WEBHOOK_SECRET=your_webhook_secret_here
+
+# WhatsApp Business Configuration
+WHATSAPP_BUSINESS_NUMBER=60172207030
+WHATSAPP_QR_LINK=https://ax.ft.tc
+WHATSAPP_WELCOME_TEMPLATE=welcome_template_name
+
+# Fiuu Payment Gateway
+FIUU_MERCHANT_ID=your_fiuu_merchant_id
+FIUU_VERIFY_KEY=your_fiuu_verify_key
+FIUU_SECRET_KEY=your_fiuu_secret_key
+FIUU_SANDBOX_MODE=true
+FIUU_API_URL=https://sandbox.fiuu.com
+
+# Application URLs
+NEXT_PUBLIC_APP_URL=https://your-domain.com
+NEXT_PUBLIC_PAYLOAD_URL=http://localhost:3000
+WEBHOOK_BASE_URL=https://your-domain.com/api/webhooks
+
+# OpenRouter AI Integration
+OPENROUTER_API_KEY=your_openrouter_api_key
+OPENROUTER_MODEL=gpt-4-vision-preview
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+
+# Firebase Authentication (Future Phase)
+FIREBASE_PROJECT_ID=your_firebase_project_id
+FIREBASE_PRIVATE_KEY=your_firebase_private_key
+FIREBASE_CLIENT_EMAIL=your_firebase_client_email
+
+# Security and Rate Limiting
+WEBHOOK_RATE_LIMIT=100
+WEBHOOK_RATE_WINDOW=900000
+JWT_SECRET=your_jwt_secret_for_api_auth
+
+# Logging and Monitoring
+LOG_LEVEL=info
+ENABLE_WHATSAPP_LOGGING=true
+SENTRY_DSN=your_sentry_dsn_for_error_tracking
