--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "seed": "cross-env NODE_OPTIONS=--no-deprecation tsx scripts/seed-data.ts",
+    "seed:enhanced": "cross-env NODE_OPTIONS=--no-deprecation tsx seed-data/enhanced-seed.ts",
+    "seed:clear": "cross-env NODE_OPTIONS=--no-deprecation tsx seed-data/clear-database.ts",
+    "seed:fresh": "pnpm run seed:clear && pnpm run seed:enhanced",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test",
@@ -26,18 +29,26 @@
     "@payloadcms/richtext-lexical": "3.54.0",
     "@payloadcms/storage-s3": "^3.54.0",
     "@payloadcms/ui": "3.54.0",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/multer": "^2.0.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.2.0",
     "dotenv": "16.4.7",
     "firebase": "^12.2.1",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.23.12",
     "graphql": "^16.8.1",
     "lucide-react": "^0.542.0",
+    "multer": "^2.0.2",
     "next": "15.4.4",
     "payload": "3.54.0",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.62.0",
