--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "cross-env": "^7.0.3",
     "crypto-js": "^4.2.0",
     "dotenv": "16.4.7",
-    "firebase": "^12.2.1",
     "form-data": "^4.0.4",
     "framer-motion": "^12.23.12",
     "graphql": "^16.8.1",
@@ -61,6 +60,7 @@
     "@playwright/test": "1.54.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/react": "16.3.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.5.4",
     "@types/node-fetch": "^2.6.13",
     "@types/react": "19.1.8",
