--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@payloadcms/storage-s3": "^3.54.0",
     "@payloadcms/ui": "3.54.0",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/forms": "^0.5.10",
