Was able to take image

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,10 @@ FIUU_API_URL=https://sandbox.fiuu.com
 NEXT_PUBLIC_APP_URL=https://your-domain.com
 WEBHOOK_BASE_URL=https://your-domain.com/api/webhooks
 
+# CORS Configuration
+CORS_LOCALHOST_PORTS=3000,3001,3002,3003
+CORS_CUSTOM_DOMAINS=local.ft.tc,ax.ft.tc
+
 # OpenRouter AI Integration
 OPENROUTER_API_KEY=your_openrouter_api_key
 OPENROUTER_MODEL=gpt-4-vision-preview
