--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/forms": "^0.5.10",
     "@types/multer": "^2.0.0",
+    "@fal-ai/client": "^1.0.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
