--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "db:restore": "cross-env NODE_OPTIONS=--no-deprecation tsx scripts/db-restore.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.886.0",
+    "@fal-ai/client": "^1.0.0",
     "@hookform/resolvers": "^5.2.1",
     "@payloadcms/db-mongodb": "3.54.0",
     "@payloadcms/next": "3.54.0",
@@ -38,13 +40,13 @@
     "@payloadcms/storage-s3": "^3.54.0",
     "@payloadcms/ui": "3.54.0",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/forms": "^0.5.10",
     "@types/multer": "^2.0.0",
-    "@fal-ai/client": "^1.0.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
