Baml is implemented. not tested

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,11 @@ OPENROUTER_API_KEY=your_openrouter_api_key
 OPENROUTER_MODEL=gpt-4-vision-preview
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 
+# FAL AI Integration (Fallback)
+FAL_KEY=your_fal_ai_api_key
+FAL_VISION_MODEL=fal-ai/llavav15-13b
+# ALLOW_DIRECT_FAL_TESTS=true
+
 
 
 # Security and Rate Limiting
