--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@boundaryml/baml": "^0.207.0",
+    "@boundaryml/baml-nextjs-plugin": "^0.1.0",
     "@eslint/eslintrc": "^3.3.1",
     "@playwright/test": "1.54.1",
     "@tailwindcss/postcss": "^4.1.12",
@@ -80,6 +82,7 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
+    "ai": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.4",
@@ -88,6 +91,7 @@
     "playwright": "1.54.1",
     "playwright-core": "1.54.1",
     "prettier": "^3.4.2",
+    "raw-loader": "^4.0.2",
     "tsx": "^4.20.5",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
