--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "@payloadcms/storage-s3": "^3.54.0",
     "@payloadcms/ui": "3.54.0",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/forms": "^0.5.10",
@@ -90,6 +90,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.4",
+    "eventsource": "^4.0.0",
     "jsdom": "26.1.0",
     "node-fetch": "^3.3.2",
     "playwright": "1.54.1",
